--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "debounce": "^1.2.1",
     "notiflix": "^3.2.5",
     "prop-types": "^15.8.1",
+    "rc-progress": "^3.4.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.1.7-beta.1",
