--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debounce": "^1.2.1",
     "notiflix": "^3.2.5",
     "prop-types": "^15.8.1",
+    "rc-progress": "^3.4.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
@@ -21,7 +22,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
-    "recharts": "^2.1.15",
     "redux-persist": "^6.0.0",
     "sass": "^1.54.0",
     "web-vitals": "^2.1.4"
